src/objects/ADvendio__AdTypeRecommendation__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__RecommendedAdType__c</fullName>
        <label>Recommended Ad Type</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>Ad Type Recommendations</relationshipLabel>
        <relationshipName>AdTypeRecommendations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__TriggeringAdType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Triggering Ad Type</label>
        <referenceTo>ADvendio__Ad_Type__c</referenceTo>
        <relationshipLabel>Triggered Ad Types</relationshipLabel>
        <relationshipName>TriggeredAdTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidFrom__c</fullName>
        <label>Valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidUntil__c</fullName>
        <label>Valid until</label>
        <type>Date</type>
    </fields>
    <label>Ad Type Recommendation</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATR-{00000}</displayFormat>
        <label>Ad Type Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Type Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>